--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
             <div class="card">
                 <img src="./assets/netflix.png" alt="">
                 <h5>Netflix</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta libero minima, ab tempore quidem quas
-                    nobis! Quam mollitia eum, sint, et nulla adipisci harum, tempora quo minima aperiam asperiores
-                    necessitatibus.</p>
+                <p>Projeto realizado, por alunos do Dev Club, montando uma pagina clone da Netflix. Utilizando HTML e CSS.</p>
                 <a href="https://maiaandrey31.github.io/Netflix/" target="_blank">Ver Projeto</a>
 
             </div>
@@ -63,9 +61,7 @@
             <div class="card">
                 <img src="./assets/starbucks.png" alt="">
                 <h5>Starbucks</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta libero minima, ab tempore quidem quas
-                    nobis! Quam mollitia eum, sint, et nulla adipisci harum, tempora quo minima aperiam asperiores
-                    necessitatibus.</p>
+                <p>Projeto Realizado como uma Landing Page da Starbucks para a´primorar os conhecimentos em HTML, CSS e JavaScript.</p>
                 <a href="https://maiaandrey31.github.io/Starbucks/" target="_blank">Ver Projeto</a>
 
             </div>
@@ -73,9 +69,7 @@
             <div class="card">
                 <img src="./assets/crono.png" alt="">
                 <h5>Cronômetro</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta libero minima, ab tempore quidem quas
-                    nobis! Quam mollitia eum, sint, et nulla adipisci harum, tempora quo minima aperiam asperiores
-                    necessitatibus.</p>
+                <p>Realização do projeto utilizando HTML, CSS e JavaScript. Confira o Projeto e funcionalidade no botão abaixo.</p>
                 <a href="https://maiaandrey31.github.io/Cronometro/" target="_blank">Ver Projeto</a>
 
             </div>
