--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
+    <link rel="shortcut icon" href="./assets/favicon-32x32.png"/>
     <title>Andrey Maia</title>
 </head>
 
