--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 HTML , CSS e JavaScript, inclusive realizei alguns projetos utilizando essas tecnologias.
                 Atualmente estudando Back end e realizando projetos de qualidade e alta performance com
                 React, NodeJs e banco de dados.</p>
-            <button><a href="#fale-comigo">Entre em Contato</a></button>
+            <a href="#fale-comigo"><button>Entre em Contato</button></a>
         </div>
     </section>
 
