--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <div class="meu-nome">
             <h1>Andrey <span>Maia</span></h1>
-            <h3>Desenvolvedor Front End</h3>
+            <h3 class="animacao-principal">Desenvolvedor Front End</h3>
         </div>
 
 
