--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </nav>
 
         <div class="meu-nome">
-            <h1>Andrey <span>Maia</span></h1>
+            <h1 class="animacao">Andrey <span>Maia</span></h1>
             <h3 class="animacao-principal">Desenvolvedor Front End</h3>
         </div>
 
