--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="card">
                 <img src="./assets/starbucks.png" alt="">
                 <h5>Starbucks</h5>
-                <p>Projeto Realizado como uma Landing Page da Starbucks para a´primorar os conhecimentos em HTML, CSS e
+                <p>Projeto Realizado como uma Landing Page da Starbucks para aprimorar os conhecimentos em HTML, CSS e
                     JavaScript.</p>
                 <a href="https://maiaandrey31.github.io/Starbucks/" target="_blank">Ver Projeto</a>
 
