--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <path d="M5 2H2v2h2v17a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1V4h2V2H5zm13 18H6V4h12z"></path>
                 </svg>
                 <h5>Conversor de Moedas</h5>
-                <p>Projeto utilizando HTML, CSS e JavaScript. Confira o Projeto e funcionalidade no botão
+                <p>Projeto HTML, CSS e JavaScript. Consumo de API, convertendo com a cotação em tempo real. Confira!
                     abaixo.</p>
                 <a href="https://maiaandrey31.github.io/Conversor-de-Moedas/" target="_blank">Ver Projeto</a>
 
