--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         </path>
                     </svg>
                     <h5>CSS</h5>
-                    <p>Background, cores, fonts, layouts, espaçamentos e animações.</p>
+                    <p>Estilização da estrutura HTML. Background, cores, fonts, layouts, espaçamentos e animações.</p>
 
 
                 </div>
@@ -144,7 +144,7 @@
                         </path>
                     </svg>
                     <h5>JavaScript</h5>
-                    <p>DOM e seus eventos, ES6 Modules, funções, utilização de Classes e heranças, promessas e Api.</p>
+                    <p>DOM, ES6 Modules, funções, Array, Objects, API, utilização de Classes, promises, Async Await...</p>
 
                 </div>
                 <div class="totem">
@@ -155,7 +155,7 @@
                         </path>
                     </svg>
                     <h5>NodeJs</h5>
-                    <p>Funcionalidades do NodeJs para o Back End Npm, Express, códigos de alto rendimento para uma
+                    <p>Funcionalidades do NodeJs para o Back End Npm, Express, JSON códigos de alto rendimento para uma
                         entrega satisfatória no Back End.</p>
 
                 </div>
