--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
     </div>
 
     <section id="sobre">
-        
-            <img src="./assets/Andrey-removebg-preview.png" alt="Andrey Maia">
-            <div>
-                <h2>Sobre Mim</h2>
-                <p>Sou apaixonado por tecnologia e por isso resolvi me tornar programador, realizando minha transição de
-                    carreira.
-                    Na programação tenho sólidos conhecimentos de Front end com tecnologias como:
-                    HTML , CSS e JavaScript, inclusive realizei alguns projetos utilizando essas tecnologias.
-                    Atualmente estudando Back end e realizando projetos de qualidade e alta performance com
-                    React, NodeJs e banco de dados.</p>
-                <a href="#fale-comigo"><button>Entre em Contato</button></a>
-            </div>
-       
+
+        <img src="./assets/Andrey-removebg-preview.png" alt="Andrey Maia">
+        <div>
+            <h2>Sobre Mim</h2>
+            <p>Sou apaixonado por tecnologia e por isso resolvi me tornar programador, realizando minha transição de
+                carreira.
+                Na programação tenho sólidos conhecimentos de Front end com tecnologias como:
+                HTML , CSS e JavaScript, inclusive realizei alguns projetos utilizando essas tecnologias.
+                Atualmente estudando Back end e realizando projetos de qualidade e alta performance com
+                React, NodeJs e banco de dados.</p>
+            <a href="#fale-comigo"><button>Entre em Contato</button></a>
+        </div>
+
     </section>
 
     <div class="projetos" id="projetos-id">
@@ -70,6 +70,19 @@
                 <p>Projeto realizado, por alunos do Dev Club, montando uma pagina clone da Netflix. Utilizando HTML e
                     CSS.</p>
                 <a href="https://maiaandrey31.github.io/Netflix/" target="_blank">Ver Projeto</a>
+
+            </div>
+            <div class="card">
+                <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 24 24"
+                    style="fill: #f9d004;transform: msFilter;">
+                    <path d="M8 13h2v7H8zm3 2h2v7h-2zm3-2h2v7h-2z"></path>
+                    <path
+                        d="M18.944 10.113C18.507 6.671 15.56 4.001 12 4.001c-2.756 0-5.15 1.611-6.243 4.15C3.609 8.793 2 10.82 2 13.001c0 2.757 2.243 5 5 5v-2c-1.654 0-3-1.346-3-3 0-1.403 1.199-2.756 2.673-3.015l.581-.103.192-.559C8.149 7.274 9.895 6.001 12 6.001c2.757 0 5 2.243 5 5v1h1c1.103 0 2 .897 2 2s-.897 2-2 2h-1v2h1c2.206 0 4-1.794 4-4a4.008 4.008 0 0 0-3.056-3.888z">
+                    </path>
+                </svg>
+                <h5>Previsão do tempo</h5>
+                <p>Projeto com funcionamento em em tempo real com Consumo de API.</p>
+                <a href="https://previsaoapp.netlify.app/" target="_blank">Ver Projeto</a>
 
             </div>
 
@@ -144,7 +157,8 @@
                         </path>
                     </svg>
                     <h5>JavaScript</h5>
-                    <p>DOM, ES6 Modules, funções, Array, Objects, API, utilização de Classes, promises, Async Await...</p>
+                    <p>DOM, ES6 Modules, funções, Array, Objects, API, utilização de Classes, promises, Async Await...
+                    </p>
 
                 </div>
                 <div class="totem">
